ignore control in h/j/k/l to arrow mapping

--- a/src/json/vim_and_shell.json.erb
+++ b/src/json/vim_and_shell.json.erb
@@ -7,22 +7,22 @@
             "manipulators": [
                 {
                     "type": "basic",
-                    "from": <%= from("h", ['fn'], ['shift', 'option', 'caps_lock', 'command']) %>,
+                    "from": <%= from("h", ['fn'], ['shift', 'option', 'caps_lock', 'command', 'control']) %>,
                     "to": <%= to([["left_arrow"]]) %>
                 },
                 {
                     "type": "basic",
-                    "from": <%= from("j", ['fn'], ['shift', 'option', 'caps_lock', 'command']) %>,
+                    "from": <%= from("j", ['fn'], ['shift', 'option', 'caps_lock', 'command', 'control']) %>,
                     "to": <%= to([["down_arrow"]]) %>
                 },
                 {
                     "type": "basic",
-                    "from": <%= from("k", ['fn'], ['shift', 'option', 'caps_lock', 'command']) %>,
+                    "from": <%= from("k", ['fn'], ['shift', 'option', 'caps_lock', 'command', 'control']) %>,
                     "to": <%= to([["up_arrow"]]) %>
                 },
                 {
                     "type": "basic",
-                    "from": <%= from("l", ['fn'], ['shift', 'option', 'caps_lock', 'command']) %>,
+                    "from": <%= from("l", ['fn'], ['shift', 'option', 'caps_lock', 'command', 'control']) %>,
                     "to": <%= to([["right_arrow"]]) %>
                 }
             ]
