--- a/src/json/vim_and_shell.json.erb
+++ b/src/json/vim_and_shell.json.erb
@@ -73,7 +73,19 @@
                     }
                 }
             ]
+        },
+
+        {
+            "description": "Remap Caps+Esc",
+            "manipulators": [
+                {
+                    "type": "basic",
+                    "from": <%= from('escape', ['fn'], ['any']) %>,
+                    "to": <%= to([["grave_accent_and_tilde"]]) %>
+                }
+            ]
         }
+
 
     ]
 }
