--- a/src/json/vim_and_shell.json.erb
+++ b/src/json/vim_and_shell.json.erb
@@ -76,12 +76,20 @@
         },
 
         {
-            "description": "Remap Caps+Esc",
+            "description": "Remap Esc+Caps/Cmd",
             "manipulators": [
                 {
                     "type": "basic",
                     "from": <%= from('escape', ['fn'], ['any']) %>,
                     "to": <%= to([["grave_accent_and_tilde"]]) %>
+                },
+                {
+                    "type": "basic",
+                    "from": <%= from('escape', ['command'], ['shift']) %>,
+                    "to": {
+                        "key_code": "grave_accent_and_tilde",
+                        "modifiers": ["command"]
+                    }
                 }
             ]
         }
